<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_header"
        android:paddingHorizontal="@dimen/dimen25"
        android:paddingVertical="@dimen/dimen13">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_header_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_regis"
            style="@style/TxtHeading4White"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/dimen36"/>
    </LinearLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dimen30"
            android:paddingVertical="@dimen/dimen20"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/edt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:hint="@string/edt_hint_username" />

            <EditText
                android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:hint="@string/edt_hint_password" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:hint="@string/edt_hint_phone" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_txt_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_txt_female" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen10"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/blood_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/reshus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:hint="@string/edt_hint_password" />

            <EditText
                android:id="@+id/edt_re_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:hint="@string/edt_hint_re_password" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_txt_personal" />

                <RadioButton
                    android:id="@+id/organization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_txt_organization" />
            </RadioGroup>

            <Spinner
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen10" />

            <EditText
                android:id="@+id/edt_home_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:hint="@string/edt_hint_home_addr" />

            <EditText
                android:id="@+id/edt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen10"
                android:drawableEnd="@mipmap/ic_blood_needed_location"
                android:drawableRight="@mipmap/ic_blood_needed_location"
                android:hint="@string/edt_hint_location" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen5"
                android:text="@string/check_txt_agree" />

            <Button
                android:id="@+id/btn_regis"
                style="@style/ButtonOutlineBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_txt_regis" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
