<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorlightBlue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen30"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TxtHeading1White"
        android:textAlignment="center"
        android:text="@string/heading_txt_almost"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TxtHeading4White"
        android:textAlignment="center"
        android:text="@string/screen3_txt_desc"
        android:paddingVertical="@dimen/dimen30"
        android:paddingHorizontal="@dimen/dimen25"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonOutlineWhite"
        android:text="@string/btn_txt_verify"/>


</LinearLayout>