<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorlightBlue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen30"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TxtHeading1White"
        android:textAlignment="center"
        android:text="@string/heading_txt_verify"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TxtHeading4White"
        android:textAlignment="center"
        android:text="@string/screen4_txt_desc"
        android:paddingVertical="@dimen/dimen10"
        android:paddingHorizontal="@dimen/dimen25"
        android:gravity="center_horizontal" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen40"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_hint_verify"
        style="@style/EditWhite"
        android:textAlignment="center"
        android:theme="@style/EditWhiteTheme"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen10"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonOutlineWhite"
        android:text="@string/btn_txt_verify"/>
    <TextView
        android:id="@+id/txt_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TxtHeading4White"
        android:textAlignment="center"
        android:paddingVertical="@dimen/dimen10"
        android:paddingHorizontal="@dimen/dimen25"
        android:gravity="center_horizontal" />


</LinearLayout>